--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "googleapis": "^155.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10"
   }
 }
