--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "node-cron": "^4.2.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "web-push": "^3.6.7"
   }
 }
